@@ -1,5 +1,11 @@
-def foo(a, b, /, c, d):
+def foo(*, a, b):
     pass
 
-def bar(a, b, /):
+def bar(a, b, /, c, d):
+    pass
+
+def baz(a, /, *, b):
+    pass
+
+def qux(a, b, /):
     pass
